--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/react-fontawesome": "^0.1.18",
     "next": "12.1.6",
     "react": "18.2.0",
+    "react-circular-progressbar": "^2.0.4",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
