--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "next": "12.1.6",
     "react": "18.2.0",
     "react-circular-progressbar": "^2.0.4",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-slideshow-image": "^3.7.5"
   },
   "devDependencies": {
     "@types/node": "18.0.0",
